[build-system]
requires = ["setuptools"]
build-backend="setuptools.build_meta"

[project]
name = "sphinxcontrib-mermaid"
authors = [{name = "Martín Gaitán", email = "gaitan@gmail.com"}]
description="Mermaid diagrams in yours Sphinx powered docs"
readme = "docs/readme_pypa.md"
license = { text = "BSD" }
version = "1.0.0"
requires-python = ">=3.8"
keywords = ["sphinx", "mermaid", "diagrams", "documentation"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Utilities",
]

dependencies = [
    "sphinx",
    "pyyaml",
]

[project.urls]
Repository = "https://github.com/mgaitan/sphinxcontrib-mermaid"
Homepage = "https://github.com/mgaitan/sphinxcontrib-mermaid"
Changelog = "https://github.com/mgaitan/sphinxcontrib-mermaid/blob/master/CHANGELOG.rst"

[project.optional-dependencies]
test = [
    "defusedxml",
    "myst-parser",
    "pytest",
    "ruff",
    "sphinx"
]

[project.scripts]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = "tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["sphinxcontrib.mermaid"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.setuptools.packages.find]
where = ["./"]
include = ["sphinxcontrib.mermaid"]
